# pong

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ball.cpp  ball.h  bat.cpp  bat.h  conanfile.py  constants.h  pong.cpp  pong.h
src/: ball.cpp  ball.h  bat.cpp  bat.h  main.cpp
test_package/: conanfile.py
